# update-from-source

./: .gitignore  Cargo.toml  README.md  test.json
.devcontainer/: devcontainer.json
.github/workflows/: build-lambda.yml  deploy-lambda.yml
src/: event_handler.rs  main.rs
