[package]
name = "update-from-source"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.2"
aws-sdk-dynamodb = "1.74.0"
aws-sdk-sqs = "1.67.0"
aws-smithy-client = "0.60.3"
aws-smithy-http-client = "1.0.2"
aws-smithy-runtime-api = "1.8.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["sqs"] }
futures = "0.3.31"

lambda_runtime = "0.13.0"
once_cell = "1.21.3"
openssl = { version = "0.10.72", features = [ "vendored"] }
reqwest = { version = "0.12.15", features = ["stream"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros"] }
tokio-util = "0.7.15"
